Feature/duplicatable (#20)
* Add ES Index configuration

Added the ability for the ES storage location to be customizable. Also added some development documentation.

* Update README.md

Fix Pictures Path

* Moved Dockerfile to Top Level

In order to build this repo using docker-compose context the Dockerfile must be at the top level.

* Modified template POST to accept flow as object

* Excluded coverage from server initialization
