# api/config/routes.js
@@ -1,8 +1,8 @@
 'use strict';
 
 module.exports = {
-    channel: require('../modules/channel/config/channel.route'),
-    channelTemplate: require('../modules/channel-template/config/channel-template.route')
+    flow: require('../modules/flow/config/flow.route'),
+    flowTemplate: require('../modules/flow-template/config/flow-template.route')
 };
 
 
