# api/modules/flow-template/controllers/findById.flow-template.controller.js
@@ -1,0 +1,17 @@
+'use strict';
+const FlowTemplate = require('../../../models').FlowTemplate;
+const Boom = require('boom');
+
+module.exports = (request, reply) => {
+
+    return FlowTemplate.findById(request.params.id, (err, flowTemplate) => {
+
+        if (err) {
+            if (err.statusCode === 404) {
+                return reply(Boom.notFound('Flow Template not found'));
+            }
+            return reply(Boom.badRequest('ES Request error'));
+        }
+        return reply(flowTemplate);
+    });
+};
