# api/modules/flow/controllers/findById.flow.controller.js
@@ -1,18 +1,18 @@
 'use strict';
 const Boom = require('boom');
-const Channel = require('../../../models').Channel;
+const Flow = require('../../../models').Flow;
 
 module.exports = (request, reply) => {
 
-    return Channel.findById(request.params.id, (err, channel) => {
+    return Flow.findById(request.params.id, (err, flow) => {
 
         if (err) {
             if (err.statusCode === 404) {
-                return reply(Boom.notFound('Channel not found'));
+                return reply(Boom.notFound('Flow not found'));
             }
             return reply(Boom.badRequest('ES Request error'));
         }
-        return reply(channel);
+        return reply(flow);
     });
 
 };
